@@ -10,6 +10,7 @@
 
 package org.junit.jupiter.params.provider;
 
+import static org.apiguardian.api.API.Status.EXPERIMENTAL;
 import static org.apiguardian.api.API.Status.STABLE;
 
 import java.lang.annotation.Documented;
@@ -61,6 +62,16 @@ import org.junit.jupiter.params.ParameterizedInvocationConstants;
  * via {@link #textBlock} will implicitly contain newlines at the end of each
  * physical line within the text block. Thus, if a CSV column wraps across a
  * new line in a text block, the column must be a quoted string.
+ *
+ * <p>Note that {@link #delimiter} (or {@link #delimiterString}),
+ * {@link #quoteCharacter}, and {@link #commentCharacter} (when
+ * {@link #textBlock} is used) are treated as <em>control characters</em>.
+ *
+ * <ul>
+ *   <li>{@link #delimiter} and {@link #quoteCharacter} must always be distinct.</li>
+ *   <li>{@link #commentCharacter} must be distinct from the others only when
+ *   {@link #textBlock} is used.</li>
+ * </ul>
  *
  * <h2>Inheritance</h2>
  *
@@ -132,17 +143,20 @@ public @interface CsvSource {
 	 * {@link #useHeadersInDisplayName}).
 	 *
 	 * <p>In contrast to CSV records supplied via {@link #value}, a text block
-	 * can contain comments. Any line beginning with a hash tag ({@code #}) will
-	 * be treated as a comment and ignored. Note, however, that the {@code #}
-	 * symbol must be the first character on the line without any leading
-	 * whitespace. It is therefore recommended that the closing text block
+	 * can contain comments. Any line beginning with a {@link #commentCharacter}
+	 * will be treated as a comment and ignored. Note that there is one exception
+	 * to this rule: if the comment character appears within a quoted field,
+	 * it loses its special meaning.
+	 *
+	 * <p>The comment character must be the first character on the line without
+	 * any leading whitespace. It is therefore recommended that the closing text block
 	 * delimiter {@code """} be placed either at the end of the last line of
 	 * input or on the following line, vertically aligned with the rest of the
 	 * input (as can be seen in the example below).
 	 *
 	 * <p>Java's <a href="https://docs.oracle.com/en/java/javase/15/text-blocks/index.html">text block</a>
 	 * feature automatically removes <em>incidental whitespace</em> when the code
-	 * is compiled. However other JVM languages such as Groovy and Kotlin do not.
+	 * is compiled. However, other JVM languages such as Groovy and Kotlin do not.
 	 * Thus, if you are using a programming language other than Java and your text
 	 * block contains comments or new lines within quoted strings, you will need
 	 * to ensure that there is no leading whitespace within your text block.
@@ -295,5 +309,23 @@ public @interface CsvSource {
 	 */
 	@API(status = STABLE, since = "5.10")
 	boolean ignoreLeadingAndTrailingWhitespace() default true;
+
+	/**
+	 * The character used to denote comments in a {@linkplain #textBlock text block}.
+	 *
+	 * <p>Any line that begins with this character will be treated as a comment
+	 * and ignored during parsing. Note that there is one exception to this rule:
+	 * if the comment character appears within a quoted field, it loses its
+	 * special meaning.
+	 *
+	 * <p>The comment character must be the first character on the line without
+	 * any leading whitespace.
+	 *
+	 * <p>Defaults to {@code '#'}.
+	 *
+	 * @since 6.0.1
+	 */
+	@API(status = EXPERIMENTAL, since = "6.0.1")
+	char commentCharacter() default '#';
 
 }
