@@ -42,6 +42,7 @@ abstract class MockCsvAnnotationBuilder<A extends Annotation, B extends MockCsvA
 	protected String[] nullValues = new String[0];
 	protected int maxCharsPerColumn = 4096;
 	protected boolean ignoreLeadingAndTrailingWhitespace = true;
+	private char commentCharacter = '#';
 
 	private MockCsvAnnotationBuilder() {
 	}
@@ -88,6 +89,11 @@ abstract class MockCsvAnnotationBuilder<A extends Annotation, B extends MockCsvA
 		return getSelf();
 	}
 
+	B commentCharacter(char commentCharacter) {
+		this.commentCharacter = commentCharacter;
+		return getSelf();
+	}
+
 	abstract A build();
 
 	// -------------------------------------------------------------------------
@@ -129,6 +135,7 @@ abstract class MockCsvAnnotationBuilder<A extends Annotation, B extends MockCsvA
 			when(annotation.nullValues()).thenReturn(super.nullValues);
 			when(annotation.maxCharsPerColumn()).thenReturn(super.maxCharsPerColumn);
 			when(annotation.ignoreLeadingAndTrailingWhitespace()).thenReturn(super.ignoreLeadingAndTrailingWhitespace);
+			when(annotation.commentCharacter()).thenReturn(super.commentCharacter);
 
 			// @CsvSource
 			when(annotation.value()).thenReturn(this.lines);
@@ -188,6 +195,7 @@ abstract class MockCsvAnnotationBuilder<A extends Annotation, B extends MockCsvA
 			when(annotation.nullValues()).thenReturn(super.nullValues);
 			when(annotation.maxCharsPerColumn()).thenReturn(super.maxCharsPerColumn);
 			when(annotation.ignoreLeadingAndTrailingWhitespace()).thenReturn(super.ignoreLeadingAndTrailingWhitespace);
+			when(annotation.commentCharacter()).thenReturn(super.commentCharacter);
 
 			// @CsvFileSource
 			when(annotation.resources()).thenReturn(this.resources);
